Extension for blog posts changed to json

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -14,6 +14,7 @@ collections:
     create: true
     folder: '/src/blog/_posts'
     slug: '{{slug}}-{{year}}-{{month}}-{{day}}'
+    extension: 'json'
     fields:
       - { label: 'Title', name: 'title', widget: 'string' }
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
