--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -6,7 +6,7 @@ backend:
   branch: main
 
 media_folder: '/src/cms/uploads/'
-public_folder: '/public/uploads'
+# public_folder: '/public/uploads'
 
 collections:
   - name: 'blog'
