--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -5,7 +5,7 @@ backend:
   name: git-gateway
   branch: main
 
-media_folder: '/src/cms/uploads/'
+media_folder: '/public/uploads'
 # public_folder: '/public/uploads'
 
 collections:
