Update Blog “bokrelease-introspektion-2024-08-21”

--- a/src/blog/_posts/bokrelease-introspektion-2024-08-21.json
+++ b/src/blog/_posts/bokrelease-introspektion-2024-08-21.json
@@ -8,7 +8,17 @@
   "galleryImages": [
     {
       "image": {
-        "image": "/public/uploads/img_2871.jpg"
+        "image": "/public/uploads/viber_image_2024-09-03_16-45-51-307.jpg"
+      }
+    },
+    {
+      "image": {
+        "image": "/public/uploads/viber_image_2024-09-03_16-45-51-330.jpg"
+      }
+    },
+    {
+      "image": {
+        "image": "/public/uploads/viber_image_2024-09-03_16-45-51-286.jpg"
       }
     }
   ]
