--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "decap-cms-app": "^3.1.10",
+    "dompurify": "^3.1.6",
+    "marked": "^14.1.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
